--- a/content/1_theorie.tex
+++ b/content/1_theorie.tex
@@ -1,7 +1,7 @@
 % ---------------------------------------
 \subsection{Theoretische Überlegungen}\label{sec:TheretischeÜberlegungen}
 Dieses Kapitel stellt die theoretischen Grundlagen dieser Arbeit und Überlegungen dar, auf welchen die später generierte Forschungsfrage und die Hypothesen aufbauen. 
-In einem ersten Teil wird aus theoretischer Sicht auf die Interaktion zwischen den Eltern und dem Kind eingegangen. Bei der Eltern-Kind-Interaktion werden die kindlichen Faktoren, die Induktion durch elterliche Verhaltensmuster, die Modellbildung durch Imitationsprozesse, die Affektregulierung der Säuglinge und die Erziehungsstile beschrieben (siehe Abbildung \ref{fig:InfografikElternKindBeziehung}). Mit den Entwicklungsaufgaben der Kinder, in denen es um die kognitive, soziale, emotionale Entwicklung und die Entwicklung der Bindung geht, wird der erste theoretische Teil der Eltern-Kind-Interaktion abgeschlossen.
+In einem ersten Teil wird aus theoretischer Sicht auf die Interaktion zwischen den Eltern und dem Kind eingegangen. Bei der Eltern-Kind-Interaktion werden die kindlichen Faktoren, die Induktion durch elterliche Verhaltensmuster, die Modellbildung durch Imitationsprozesse, die Affektregulierung der Säuglinge und die Erziehungsstile beschrieben (siehe Abbildung \ref{fig:InfografikElternKindBeziehung}, S. \pageref{fig:InfografikElternKindBeziehung}). Mit den Entwicklungsaufgaben der Kinder, in denen es um die kognitive, soziale, emotionale Entwicklung und die Entwicklung der Bindung geht, wird der erste theoretische Teil der Eltern-Kind-Interaktion abgeschlossen.
 
 Im zweiten Teil dieses Kapitels soll aus theoretischer Sicht auf das Verhalten der Eltern eingegangen werden, welches für diese Arbeit in Bezug auf die Eltern-Kind-Interaktion relevant ist und die eigentliche Mediennutzung der Eltern zu moderieren scheint. In diesem Teil enthalten ist der Bindungsstatus der Eltern, der in Bezug auf die Eltern-Kind-Interaktion betrachtet wird, das psychologische Konstrukt des Stresses, der aufgrund der täglichen Situationen und der subjektiven Empfindung erläutert wird und das subjektive Wohlbefinden, das als psychologisches Konstrukt für das Glück der Eltern steht.
 
