--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -166,6 +166,8 @@ Die Operationalisierung erfolgt anhand der Mittelwertbildung der vier Items \cit
     SHS~I=\frac{SHS_{1}+SHS_{2}+SHS_{3}+SHS_{4}}{4}
 \end{equation}
 
+
+
 \subsection{Datenerhebung \& Rekrutierung}\label{sec:Datenerhebung}
 Zur Datengewinnung wurde die von der ZHAW zur Verfügung gestellte Umfragesoftware Enterprise Feedback Suite in der Version 10.9 der Firma \citeA{Questback2018} verwendet. Der Fragebogen wurde mit Hilfe der vorhandenen Dokumentation kreiert \cite{EFS2016} und wurde Mitte Januar bis Ende Mai 2018 aktiv geschaltet.  Der Zugang zur Befragung erfolgte über die von der Firma \citeA{Questback2018} bereitgestellte öffentliche Internetadresse, welche zum Zeitpunkt der Befragung wie folgt lautete: https://ww2.unipark.de/uc/elternfragebogen/.
 
@@ -182,7 +184,7 @@ Insgesamt schlossen 248 Personen die Umfrage ab. 1454 Personen sind zumindest au
 
 Nach der Datenbereinigung blieben netto 218 Personen übrig (87.9 \%). Einige Personen wurde ausgemustert, da sie beim Jahrgang einen fehlerhaften Wert angegeben hatte (Jg 2017). Zwei weitere Person gaben an, die Umfrage nicht seriös ausgefüllt zu haben. Zwei Personen mussten entfernt werden, da sie bei der Angabe der Mediennutzungszeit in Minuten mit Ja und Nein antworteten. 25 Personen wurden entfernt, da das Alter ihrer Kinder 13 Monate überstieg. 
 
-\begin{table}[htbp]
+\begin{table}[hbtp]
 \centering
 \captionsetup{margin=110pt,skip=5pt}
 \caption{Stichprobe}
