--- a/content/3_ergebnisse.tex
+++ b/content/3_ergebnisse.tex
@@ -60,7 +60,6 @@ Weiter wurde die Medientätigkeit in Minuten anhand der letzten Betreuung des Ki
   $MNS_{Total}$*** & 202.10 & 174.86 & 3 - 840 & 1.44 \\
   \hline
   \multicolumn{5}{l}{\textit{Anmerkung. *$N$ = 208, **$N$ = 205, ***$N$ = 204, Angaben in Minuten.}}\\
-  &&&&\\
 \end{tabular}
 \label{table:Medientätigkeit}
 \end{table}
@@ -102,6 +101,7 @@ Auf die einzelnen Medien verteilt bedeutet das, dass die Probanden im Schnitt $M
 \end{figure}
 
 Neben der Mediennutzung und der Medientätigkeit wurde die Anzahl Geräte im Haushalt erfragt (detaillierte Auflistung siehe Tabelle \ref{fig:AppGeräteHaushalt} im Anhang). Dabei gaben 83.9 \% der Befragten an, zwei Smartphones im Haushalt zu besitzen. 70.2 \% gaben an, ein TV-Gerät zu besitzen. 45 \% besitzen zwei Computer (Desktop oder Laptop), 45.9 \% ein Tablet und 48.2 \% ein Radio (Stereoanlage, CD-Player) im Haushalt. 51.4 \% gaben an, keine Tageszeitung oder ein Magazin abonniert zu haben. 45.9 \% gaben an, einen Fotoapparat oder eine Videokamera zu besitzen. 61 \% besitzen keine Spielekonsole und 67 \% keinen MP3-Player.
+\linebreak
 
 Zudem wurden die Medien erhoben, auf welche die Eltern während der Betreuung am wenigsten verzichten konnten (siehe Tabelle \ref{fig:AppMedienverzicht} im Anhang). 85.3 \% gaben an, nicht auf das Smartphone verzichten zu können, gefolgt von Radio 33.9 \% (Stereoanlage, CD-Player) und 25.2 \% Foto- und Videokamera. Nicht verzichten können 11.9 \% der Teilnehmenden auf den Fernseher, 9.6 \% auf das Abonnement einer Tageszeitung oder Zeitschrift, 8.3 \% nicht auf den Computer (Laptop oder Desktop), 2.8 \% auf den MP3-Player, 2.3 \% auf das Tablet und 0.9 \% auf die Spielekonsole.
 
@@ -147,6 +147,8 @@ Für die Beantwortung der Fragestellung wurde anhand der Skalen eine Aufteilung 
   \multicolumn{5}{l}{\textit{Anmerkung.} $N$=218, Skala Wertebereich 0 bis 100}\\
 \end{tabular}
 \end{table}
+
+\newpage 
 
 \subsubsection{Stress anhand \acrshort{psq}}
 Die Skalenauswertung des \acrfull{psq} liefert folgende Werte (siehe Tabelle \ref{table:PSQDeskriptiv}): Der Mittelwert $M$ der Skala $PSQ_{Sorgen}$ beträgt 24.28 ($SD$ = 17.69). Der Mittelwert $M$ der Skala $PSQ_{Anspannung}$ beträgt 42.14 ($SD$ = 21.96). Der Mittelwert $M$ der Skala $PSQ_{Freude}$ beträgt 65.26 ($SD$ = 19.08). Der Mittelwert $M$ der Skala $PSQ_{\text{\textit{Anforderung}}}$ beträgt 46.97 ($SD$ = 19.54) und der Gesamtmittelwert $M$ der Skala $PSQ_{Gesamtscore}$ beträgt 37.03 ($SD$ = 17.11).
@@ -202,6 +204,7 @@ Der Hypothesentest für die Hypothese $H3$ mittels einfacher linearer Regression
 Für die Überprüfung der Hypothese $H4$ wurde eine einfaktorielle Varianzanalyse durchgeführt, um einen Unterschied in der Mediennutzung abhängig zur Bindung und zum Stress zu untersuchen. Analog Hypothese $H1$ wurde die Bindung in zwei Gruppen unterteilt: Gruppe sicher Gebundene ($N$ = 144, $M$ = 199.09, $SD$ = 179.017) und unsicher Gebundene ($N$ = 60, $M$ = 209.316, $SD$ = 165.701). Da sich die Hypothesen $H1$ und $H4$ in der Berechnung ähnlich sind, wurden bei der Prüfung der Voraussetzungen für die einfaktorielle Varianzanalyse ähnlich Probleme festgestellt (siehe dazu Abschnitt \nameref{sec:Hypothesentest1}). Da es sich um dieselben Variablen handelte wie bei Hypothese $H1$, mit Zugabe der Kovariate Stress, wurde das Modell unter Begründung der Gruppengrösse weiter berechnet. 
 
 Gemäss Überprüfung der Varianzhomogenität mittels Levene-Test konnte von einer Gleichheit der Varianzen ausgegangen werden (Levene-Test; $p$ = .708). 
+\linebreak
 
 Der Hypothesentest für Hypothese $H4$ mittels ANOVA lieferte ein nicht signifikantes Ergebnis. Die Bindung von sicher und unsicher zusammen mit dem Stressempfinden ergab keinen statistisch signifikanten Unterschied auf die gesamte Mediennutzung der Stichprobe ($F$(2,201) = .206, $p$ = .814, partielles $\eta^2$ = .002, $n$ = 204). Basierend auf diesen Ergebnissen musste die Nullhypothese $H4_{0}$ angenommen werden. 
 
@@ -216,3 +219,4 @@ Zusätzlich zur Unterteilung nach wach und schlafend, wurde die Berechnung von $
 Weitere Analysen wurden mittels der erfassten demografischen Daten durchgeführt. Diese wurden in Beziehung zu den erfassten Konstrukten \enquote{Bindung}, \enquote{Mediennutzung}, \enquote{Stress} und \enquote{subjektives Wohlbefinden} gesetzt. Dabei lassen sich die Daten in kategoriale Daten und intervall\-skalierte Daten unterteilen. Unter kategoriale Daten fallen das Geschlecht, die Einkommensstufen, die Bildungsstufen, das Geschlecht des Kindes und die Lebensform der Eltern. Unter intervall\-skalierte Daten fallen das Alter der Eltern, das Alter des Kindes in Monaten, die Anzahl Tage der Fremdbetreuung und die Anzahl Personen im Haushalt. Dabei wurden kategorial\-skalierte Variablen als Faktoren mittels ANOVA bezüglich der erfassten Konstrukte durchgeführt. Die Fragestellung lautete dabei, ob sich die Mittelwerte der abhängigen Variable (z. B.: Bindungsskala \textit{Angst}, Stressindex \textit{Anspannung}, SWB etc.) bezüglich mehrerer Gruppen der unabhängigen Variable statistisch signifikant unterscheiden  (z. B. Bildung, Geschlecht, Einkommen etc.). Für intervall\-skalierte Daten wurde die Berechnung mittels einfacher linearer Regression vorgenommen. Die Fragestellung lautete dabei, ob es einen Zusammenhang zwischen der unabhängigen (z. B. Prädiktor Alter der Eltern, Alter des Kindes, Anzahl Tage der Fremdbetreuung etc.) und der abhängigen Variable gibt (z. B. Kriterium Mediennutzung bei schlafendem Kind, Bindungsskala \textit{Nähe} etc.). Für eine der insgesamt 99 Kombinationen konnte ein statistisch signifikantes Ergebnis ($p<.05$) gefunden werden. Dies wurde zwischen der Bildung und dem Stressindex \textit{Anforderung} mittels ANOVA ($F$(6,210) = 3.795, $p$ = .001, partielles $\eta^2$ = .098, $n$ = 217) gefunden. Dabei war der Levine-Test nicht signifikant (F(6,210) = .337, $p$ = .917) und es kann von einer Varianzhomogenität ausgegangen werden. 7.2 \% der Streuung der Skala Anpassung um den Gesamtmittelwert kann durch die Bildung erklärt werden (korrigiertes R-Quadrat). Die Effektstärke nach \citeA{Cohen1988a} liegt bei $f$ = .33 und entspricht einem mittleren Effekt. Der Tukey post-hoc Test zeigte einen signifikanten Unterschied ($p$ = .045) in den Werten der Skala Anforderung des Stressindex zwischen den Gruppen Berufsmatura / Fachmittelschule (Sekundär II) ($M$ = 57.19, $SD$ = 20.88) und Höhere Fachschule (Tertiär) ($M$ = 41.87, $SD$ = 16.22) (15.326, 95\%-CI[.21, 30.44]). Somit hatte die Gruppe Höhere Fachschule im Schnitt eine um 15.33 tiefere Ausprägung auf der Stressskala Anforderung als die Gruppe Berufsmatura / Fachmittelschule. Bei den restlichen Paarvergleichen konnte keine Signifikanz festgestellt werden.
 
 In einem letzten Schritt wurden Korrelationen zwischen den erfassten Skalen (Bindung, Stress und \acrshort{swb}) und den einzelnen Medientätigkeiten gebildet (z. B. Textnachrichten schreiben, fernsehen etc.).  Bei der Berechnung der Korrelationen wurde von einem ungerichteten Zusammenhang ausgegangen, somit erfolgte die Testung auf Signifikanz zweiseitig \cite{UniversitatZurich2018}. Da mehrere Korrelationen gleichzeitig berechnet wurden, kam der paarweise Fallausschluss zum Tragen. Das heisst, dass für jede Korrelation alle Fälle verwendet wurden, die für beide Variablen gültige Werte aufwiesen. Dabei konnten folgende signifikanten Korrelationen gefunden werden: (1) Bindungsskala \acrshort{aas} \enquote{Nähe} zu Medientätigkeit \enquote{Textnachrichten schreiben}, während das Kind wach war ($r$ = -.162, $p$ = .017, $n$ = 217). (2) Bindungsskala \enquote{Vertrauen} zu Medientätigkeit \enquote{Textnachrichten schreiben}, während das Kind wach war ($r$ = -.241, $p$ < .001, $n$ = 217). (3) Bindungsskala \enquote{Vertrauen} zu Medientätigkeit \enquote{Textnachrichten schreiben}, während das Kind geschlafen hat ($r$ = -.177, $p$ = .009, $n$ = 217). (4) Bindungsskala \enquote{Vertrauen} zu Medientätigkeit \enquote{Fernsehen}, während das Kind wach war ($r$ = -.186, $p$ = .006, $n$ = 216). (5) Bindungsskala \enquote{Angst} zu Medientätigkeit \enquote{Textnachrichten schreiben}, während das Kind wach war ($r$ = .147, $p$ = .03, $n$ = 217). (6) Bindungsskale \enquote{Angst} zu Medientätigkeit \enquote{Lesen von Printmedien}, während das Kind geschlafen hat ($r$ = -.145, $p$ = .033, $n$ = 216). (7) Stressskala \acrshort{psq} \enquote{Sorgen} zu Medientätigkeit \enquote{Textnachrichten schreiben}, während das Kind wach war ($r$ = .191, $p$ = .005, $n$ = 218). (8) Stressskala \enquote{Sorgen} zu Medientätigkeit \enquote{Internet}, während das Kind wach war ($r$ = .137, $p$ = .043, $n$ = 217). (9) Stressskala \enquote{Sorgen} zu Medientätigkeit \enquote{Radio hören}, während das Kind geschlafen hat ($r$ = .136, $p$ = .048, $n$ = 213). (10) Stressskala \enquote{Freude} zu Medientätigkeit \enquote{Textnachrichten schreiben}, während das Kind wach war ($r$ = -.197, $p$ = .004, $n$ = 218). (11) Stressskala \enquote{Freude} zu Medientätigkeit \enquote{Telefonieren}, während das Kind wach war ($r$ = -.161, $p$ = .018, $n$ = 217). (12) Stressskala \enquote{Total} zu Medientätigkeit \enquote{Textnachrichten schreiben}, während das Kind wach war ($r$ = .156, $p$ = .021, $n$ = 218). (13) \acrfull{swb} zu Medientätigkeit \enquote{Textnachrichten schreiben}, während das Kind wach war ($r$ = -.179, $p$ = .008, $n$ = 218). (14) \acrshort{swb} zu Medientätigkeit \enquote{Telefonieren}, während das Kind wach war ($r$ = -.141, $p$ = .038, $n$ = 217). (15) \acrshort{swb} zu Medientätigkeit \enquote{Fotografieren}, während das Kind wach war ($r$ = .136, $p$ = .046, $n$ = 217). Alle genannten signifikanten Korrelationen gehen mit einem nach \citeA{Cohen1988a} schwachen Effekt einher. Für eine Übersicht der Resultate siehe Anhang \ref{app:Korrelationen}: \textit{\nameref{app:Korrelationen}}.
+\newpage
