--- a/content/4_diskussion.tex
+++ b/content/4_diskussion.tex
@@ -12,7 +12,7 @@ Aus diesen Ergebnissen lässt sich ableiten, dass die Bindung der Eltern währen
 
 % ---------------------------------------
 \subsection{Interpretation} \label{sec:Interpretation}
-Steht nun die Bindung in einem Zusammenhang mit der Mediennutzung der Eltern und wird diese Nutzung nicht auch vom Stress moderiert? Lässt sich zudem ein Zusammenhang zwischen der Mediennutzung der Eltern und dem subjektiven Wohlbefinden der Eltern finden? Das vorliegende Kapitel soll auf einzelne Aspekte näher eingehen und dies zu beantworten versuchen.
+Basierend auf den Ergebnissen steht die Bindung in keinem direkten Zusammenhang mit der Mediennutzung der Eltern während der Betreuung ihrer Kinder. Zudem hat der empfundene Stress der Eltern keine moderierende Funktion auf diese Nutzung. Basierend auf den Ergebnissen der weiterführenden Untersuchungen lassen sich dennoch gewisse Rückschlüsse zwischen der Mediennutzung der Eltern und dem Bindungsstil herleiten. Das vorliegende Kapitel soll auf einzelne Ergebnisse näher eingehen und einzelne Aspekte im Zusammenhang mit der Fragestellung beantworten.
 
 % Stichprobe
 \subsubsection{Die Stichprobe ist weiblich und gut gebildet}
@@ -85,7 +85,7 @@ Für die Erfassung des subjektiven aktuellen Belastungserlebens der Eltern wurde
 \subsection{Ausblick und persönliche Überlegungen} \label{sec:Ausblick}
 Gemäss den Hypothesentests konnte kein Zusammenhang zwischen der Bindung, dem erlebten Stress der Eltern und der Medientätigkeit während der Betreuung gefunden werden. Die Medientätigkeit, so wie sie in dieser Studie erfasst wurde, scheint zu breit erfasst worden zu sein. Die Effekte sind, wenn sie vorhanden sind, viel subtiler vorhanden, als dass sie sich über die Gesamtmediennutzung abbilden lassen würden. Zudem scheint die Bindung nicht mit allen Medientätigkeiten im Zusammenhang zu stehen - in dieser Studie nur mit dem Schreiben von Textnachrichten. Kritisch zu hinterfragen ist hier sehr wohl, ob die Bindung der Eltern durch den eingesetzten Fragebogen (\acrshort{aas}) exakt erfasst wurde und ob dies generell mit einem Fragebogen überhaupt möglich ist. In der Psychologie sind Abgrenzungen nicht immer klar zu ziehen. Ebenso zeigen die gefundenen Effekte weder eine Richtung des Zusammenhangs zwischen der Bindung und der Mediennutzung noch einen Einfluss auf die Entwicklungsaufgaben in der Eltern-Kind-Interaktion. Für künftige Forschung wäre es interessant, diese Interaktion im Zusammenhang mit Medien und Bindung näher zu untersuchen. Zudem ist unklar, wie das vermehrte Schreiben von Textnachrichten in Beziehung zu einem unsicheren Bindungsstil steht. Tendieren unsicher Gebundene dazu, sich vermehrt aus der Beziehung zu ihrem Kind zu nehmen indem sie sich mittels Smartphone distanzieren, oder könnte das Smartphone sogar eine Veränderung des Bindungsstils begünstigen? Dass der Bindungsstil sich über die Lebenszeit verändern kann, haben \citeA{Lewis2000} in einer Langzeitstudie untersucht. Dieser Punkt kann durch diese Arbeit nicht beantwortet werden. Vielmehr liefert diese Arbeit eine Anzahl von Indizien, welchen weiter nachgegangen werden könnte.
 
-Weiter wäre zu untersuchen, in welchem Verhältnis die Bindung der Eltern über die Mediennutzung zur Bindung der Kinder steht. Die Medien als \enquote{Übertragungsmittel} der Bindung zum Kind betrachten. Dabei wäre zu untersuchen, ob gewisse Medien in einem Zusammenhang zwischen der Bindung der Eltern und der sich entwickelnden Bindung des Kindes stehen und in welcher Form diese Medien den Bindungsstil und das Bindungsverhalten tangieren. Aus dieser Arbeit lässt sich ein kleiner Zusammenhang zwischen dem Bindungsstil der Eltern auf deren Smartphonegebrauch während der Betreuung herleiten. Zudem scheint es einen Zusammenhang zwischen dem Smartphonegebrauch der Eltern während der Betreuung und dem Bindungsstil der Kinder gemäss \citeA{Dietziker2018} zu geben. Basierend darauf lassen sich nur Vermutungen anstellen. Der Bindungsstil der Eltern könnte sich über die Verwendung gewisser Medien zum Kind übertragen. Es liegt jedoch an fortführenden Untersuchungen, dies zu untersuchen und das Smartphone oder generell Medien als Übertragungsinstrumente der Bindung zu betrachten. Die Bindung scheint gemäss diesen kürzlich gemachten Untersuchungen eine Rolle im Umgang mit dem Smartphone zu spielen.
+Weiter wäre zu untersuchen, ob sich die Bindung der Eltern über deren Mediennutzung auf die Bindung der Kinder überträgt. Medien als \enquote{Übertragungsmittel} der Bindung. Dabei wäre zu untersuchen, ob gewisse Medien in einem Zusammenhang zwischen der Bindung der Eltern und der sich entwickelnden Bindung des Kindes stehen und in welcher Form diese Medien den Bindungsstil und das Bindungsverhalten tangieren. Aus dieser Arbeit lässt sich ein kleiner Zusammenhang zwischen dem Bindungsstil der Eltern auf deren Smartphonegebrauch während der Betreuung herleiten. Zudem scheint es einen Zusammenhang zwischen dem Smartphonegebrauch der Eltern während der Betreuung und dem Bindungsstil der Kinder gemäss \citeA{Dietziker2018} zu geben. Basierend darauf lassen sich nur Vermutungen anstellen. Der Bindungsstil der Eltern könnte sich über die Verwendung gewisser Medien zum Kind übertragen. Es liegt jedoch an fortführenden Untersuchungen, dies zu untersuchen und das Smartphone oder generell Medien als Übertragungsinstrumente der Bindung zu betrachten. Die Bindung scheint gemäss diesen kürzlich gemachten Untersuchungen eine Rolle im Umgang mit dem Smartphone zu spielen.
 
 Basierend auf diesen Überlegungen könnten neue Medien künftig als Projektionsfläche für innere psychologische Konstrukte der Nutzer herangezogen werden - als Mittel, um das innere psychische Konstrukt durch den Umgang sichtbar zu machen, zum Beispiel den Bindungsstil, der während der Betreuung der Kinder durch ein bestimmtes Verhalten sichtbar gemacht würde. Die Nutzung des Smartphones könnte dadurch um einen psychologischen Zusatznutzen erweitert werden. Durch die technisch nahezu grenzenlosen Möglichkeiten heutiger Geräte könnten sich der Psychologie neue Ufer erschliessen. Die Geräte könnten quasi als \enquote{Spiegel der Seele} dienen. Es scheint aber wichtig, das Smartphone nicht als Ursache für ein gewisses Verhalten zu betrachten, sondern als Ausdrucksform einer psychologischen Eigenschaft. Vorstellbar ist bereits heute, das Smartphone therapeutisch einzusetzen (\textit{engl. smartphone-based treatment}). Dies wurde bereits in Studien untersucht (z. B. Prokrastination mit Hilfe des Smartphones verringern \cite{Lukas2018}). Trotz aller Zukunftsvisionen und technischer Möglichkeiten soll dabei nicht vergessen werden, dass in dieser Studie kleine Effekte gefunden wurden. Dass sich diese für allgemeine Aussagen über Persönlichkeitseigenschaften nicht nutzen lassen, ist selbsterklärend. Gut möglich ist aber, dass sich psychologische Eigenschaften durch den Gebrauch von neuen Medien abbilden lassen. In Frage zu stellen ist hingegen, ab damit Voraussagen gemacht werden können. Zu vielfältig ist die Psyche, als dass sie sich so einfach durch Technik abbilden lassen würde.  
 
