--- a/content/Anhang/Inhaltsverzeichnis.tex
+++ b/content/Anhang/Inhaltsverzeichnis.tex
@@ -1,5 +1,6 @@
 %Table
 \begin{table}[ht]
+\centering
 \begin{tabular}{l m{27em}  r}
   \hline
   \textbf{Anhang} & \textbf{Titel} & \textbf{Seite} \\
